[package]
name = "phenomenon"
version = "0.0.0"
edition = "2018"

authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Functions for software testing =)"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/foresterre/phenomenon"

# rust-version = ""
# OR if MSRV < 1.56
#[package.metadata]
#msrv = ""

keywords = ["test", "tests", "contains", "least", "order"]
categories = ["development-tools::testing"]

[dependencies]
